fix GitHub button on mobile

--- a/src/_assets/scss/inc/_layout.scss
+++ b/src/_assets/scss/inc/_layout.scss
@@ -145,6 +145,7 @@
 		align-items: center;
 		margin: 0;
 		padding: 0;
+		margin-bottom: 0.4rem;
 		@include mq(md) {
 			padding-block-start: 0.4rem;
 		}
